--- a/src/components/SubmitButton/SubmitButton.module.css
+++ b/src/components/SubmitButton/SubmitButton.module.css
@@ -1,6 +1,7 @@
 .button{
-    display: flex;
-    flex-direction: column;
     font-size: 34px;
     font-weight: 600;
+    margin-top: 35px;
+    padding: 25px;
+    border-radius: 40px;
 }
