--- a/src/components/InputField/InputField.module.css
+++ b/src/components/InputField/InputField.module.css
@@ -1,9 +1,30 @@
-.input{
-    margin-top: 25px;
-    font-size: 24px;
-    font-weight: 600;
-    padding: 15px;
-    align-items: center;
-    border-radius: 40px;
-    text-align: center;
+.input {
+  margin-top: 25px;
+  font-size: 34px;
+  font-weight: 600;
+  padding: 15px 25px;
+  border-radius: 40px;
+  text-align: center;
+  border: 2px solid transparent;
+  cursor: pointer;
+  transition: all 0.3s ease, border 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  outline: none;
+}
+
+.input:hover {
+  background: linear-gradient(135deg, #fdf8f8, #f5f5f5);
+  box-shadow: 0 6px 12px rgba(245, 234, 234, 0.15);
+}
+
+.input:focus {
+  border: 2px solid #e6a5e7c4;
+  box-shadow: 0 6px 12px #e9cdfa(246, 96%, 68%, 0.3);
+}
+
+.error {
+  margin-top: 15px;
+  font-size: 24px;
+  font-weight: 500;
+  color: rgba(211, 50, 50, 0.877);
 }
