--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color: rgba(3, 3, 3, 0.87);
-  background-color: #faf8f8;
+  color: rgba(3, 3, 3, 0.664);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -27,9 +26,46 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #ffffff;
+  background-image: url("https://media.istockphoto.com/id/499455204/uk/%D1%84%D0%BE%D1%82%D0%BE/%D0%BC%D1%8F%D0%BA%D0%B8%D0%B9-%D1%85%D0%BC%D0%B0%D1%80%D0%BD%D0%B8%D0%B9-%D1%84%D0%BE%D0%BD-%D0%B7-%D0%B3%D1%80%D0%B0%D0%B4%D1%96%D1%94%D0%BD%D1%82%D0%BE%D0%BC-%D0%B1%D0%B0%D1%80%D0%B2%D0%B8%D1%81%D1%82%D0%B8%D0%BC.jpg?s=612x612&w=0&k=20&c=VhYegmV55VvFN492LfpnY8S1KVBDZv7sfaGYqM0NT1w=");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+button {
+  font-size: 34px;
+  font-weight: 600;
+  margin-top: 35px;
+  padding: 25px 50px;
+  border-radius: 40px;
+  cursor: pointer;
+  background: linear-gradient(135deg, #d39af5e8, #ffe8f1);
+  color: #ffffff;
+  border: 2px solid #dfb4f8;
+  box-shadow: 0 12px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+  outline: none;
+  text-shadow: -1px -1px 0 #bb5cf1, 1px -1px 0 #bb5cf1, -1px 1px 0 #bb5cf1,
+    1px 1px 0 #bb5cf1;
+}
+
+button:hover {
+  background: linear-gradient(135deg, #ffe8f1, #e0aaffe8);
+  transform: translateY(-3px);
+}
+
+button:active {
+  transform: translateY(2px);
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+}
+
+p {
+  margin-top: 35px;
+  font-size: 34px;
+  font-weight: 500;
 }
